--- a/Readme
+++ b/Readme
@@ -4,4 +4,6 @@
     watchlist.jsp 修改symbol,name 增加alert()顯示產品名稱
     menu.jspf 修改side-menu.css 欄位風格設計
     tstock.jsp 新增 auto_refresh 讓進入Tstock時自動更新價格
+    watch.jsp 新增標題出現觀察名稱
+    發現login bug 修改程式碼 investor.jsp , login.jsp , InvestorController.java , LoginController.java
 
