--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
+<img src="https://github.com/lucky85406/SpringMVC_1128_JPA/blob/master/src/main/webapp/portfolio/images/fortfolio.png">
 #2020/02/14 
 -0100:
     完成修改，網頁正常執行，加入Readme.txt
